# twitter-to-email

./: .env.example  .gitignore  ANSWERS.md  IMPLEMENTATION_PLAN.md  PLAN_FUNCTIONALITY.md  PLAN_RUNTIME.md  README.md  pyproject.toml  railway.json  test_auth.py  usernames.txt  users_i_follow_nov27.json
src/: __init__.py  config.py  email_builder.py  email_sender.py  main.py  subscribers.py  twitter_client.py  web_server.py
templates/: digest.html
tests/: __init__.py
web/static/css/: styles.css
web/templates/: contact.html  index.html  privacy.html  success.html  terms.html  unsubscribe.html
